platform/chat-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend
  namespace: event-12
spec:
  replicas: 0
  selector:
    matchLabels:
      app: chat-frontend
  template:
    metadata:
      labels:
        app: chat-frontend
    spec:
      containers:
        - name: chat-frontend
          image: krusonl.azurecr.io/chat-frontend:sha-c4e1dbf
          ports:
            - containerPort: 8501
          resources: {}
