platform/chat-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend
  namespace: event-12
spec:
  selector:
    app: chat-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
